--- a/Exercicios/CRUD-livro/package.json
+++ b/Exercicios/CRUD-livro/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "nodemon": "^3.1.10",
     "yup": "^1.7.1"
